example: fixed extra margin

--- a/example/src/App/App.css
+++ b/example/src/App/App.css
@@ -2,11 +2,6 @@ body {
   background: #efefef;
 }
 
-.App {
-  margin-bottom: 200px;
-
-}
-
 .App a {
   color: #3192e7;
   text-decoration: none;
